debugged mongo db problem

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "blog2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,13 @@
   "bugs": {
     "url": "https://github.com/shogunzaku/blog2/issues"
   },
-  "homepage": "https://github.com/shogunzaku/blog2#readme"
+  "homepage": "https://github.com/shogunzaku/blog2#readme",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
